[Panji] fixing management product
